--- a/ITS_demo/templates/algebra_add.html
+++ b/ITS_demo/templates/algebra_add.html
@@ -8,11 +8,11 @@
       }
 
       #error {
-            border:2pt solid red;
+            border:2px solid red;
         }
 
       #right {
-        border:2pt solid green
+        border:2px solid green
       }
       
 .project {
@@ -368,10 +368,10 @@ function right2(){
 {% block topic %}Horizontal Addition{% endblock %}
 
 {% block hint %}
-  <button class="btn btn-info" id = "btn1" style="width: 100%; margin: 10px auto;">Add all coefficients</button>
-  <button class="btn btn-info" id = "btn2" style="width: 100%; margin: 10px auto;" onclick="right2();">Write all terms with same powers</button>
-  <button class="btn btn-info" id = "btn3" style="width: 100%; margin: 10px auto;">Add first value of each polynomials</button>
-  <button class="btn btn-info" id = "btn4" style="width: 100%; margin: 10px auto;" onclick="right1();">Write all terms</button>
+  <button class="btn btn-info" id = "btn1" style="width: 100%; margin: 10px auto;width:100%">Add all coefficients</button>
+  <button class="btn btn-info" id = "btn2" style="width: 100%; margin: 10px auto;width:100%" onclick="right2();">Write all terms with same powers</button>
+  <button class="btn btn-info" id = "btn3" style="width: 100%; margin: 10px auto;width:100%">Add first value of each polynomials</button>
+  <button class="btn btn-info" id = "btn4" style="width: 100%; margin: 10px auto;width:100%" onclick="right1();">Write all terms</button>
 {% endblock %}
    
 
