--- a/ITS_demo/templates/fracompare.html
+++ b/ITS_demo/templates/fracompare.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout_new.html" %}
 {% block title %}Q1{% endblock %}
 {% block style %}
 .project {
@@ -56,11 +56,10 @@ const check0=()=>
 	if(document.getElementsByTagName("input")[0].value == {{ answer.lcm }} )
 	{
 	   $(x[0]).show();
-       $(y[0]).hide();
-document.getElementsByTagName("h2")[0].innerHTML="";
-document.getElementById("icon1").style.display="inline";
-
-
+     $(y[0]).hide();
+    document.getElementsByTagName("h2")[0].innerHTML="";
+    document.getElementById("icon1").style.display="inline";
+    document.getElementsByClassName("step0")[0].classList.add("active");
     }
 	 else
 	 {
@@ -68,23 +67,6 @@ document.getElementById("icon1").style.display="inline";
         $(x[0]).hide();
         $(y[0]).show();
 	    document.getElementsByTagName("input")[0].value = "";
-	    swal(
-	    {
-          title: "Oops, Looks like you are not familiar with LCM ",
-          text: "for example,  LCM of 5 and 6 is 30.",
-          icon: "error",
-          button: true,
-          dangerMode: true,
-        }
-       )
-        .then((willDelete) => {
-          if (willDelete) {
-            swal("Now, try again", {
-
-              icon: "success",
-            });
-          }
-        });
 	 }
 }
 
@@ -101,20 +83,6 @@ function check1()
 	    $(x[1]).hide();
         $(y[1]).show();
 	    document.getElementsByTagName("input")[1].value = "";
-	    swal({
-  title: "Oops, Looks like you multiplied wrong ",
-  text: "To get numerator, multipliy it with multiplication factor i.e. lcm/denominator",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
 	 }
 }
 
@@ -126,6 +94,7 @@ function check2()
 	   $(y[2]).hide();
 document.getElementsByTagName("h2")[1].innerHTML="";
     document.getElementById("icon2").style.display="inline";
+    <!-- document.getElementsByClassName("step0")[1].classList.add("active"); -->
 
 	  }
 	else
@@ -134,20 +103,6 @@ document.getElementsByTagName("h2")[1].innerHTML="";
 	    $(x[2]).hide();
         $(y[2]).show();
         document.getElementsByTagName("input")[2].value = "";
-        swal({
-  title: "Oops, Looks like you are confused",
-  text: "Denominator would be same as LCM",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
     }
 }
 
@@ -164,20 +119,6 @@ function check3()
 	    $(x[3]).hide();
       $(y[3]).show();
 	    document.getElementsByTagName("input")[3].value = "";
-	    swal({
-  title: "Oops, Looks like you multiplied wrong ",
-  text: "To get numerator, multipliy it with multiplication factor i.e. lcm/denominator",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
 	}
 }
 
@@ -186,9 +127,10 @@ function check4()
 	if(document.getElementsByTagName("input")[4].value == {{ answer.den2 }})
 	{
         $(x[4]).show();
-	    $(y[4]).hide();
-document.getElementsByTagName("h2")[2].innerHTML="";
-    document.getElementById("icon3").style.display="inline";
+	      $(y[4]).hide();
+        document.getElementsByTagName("h2")[2].innerHTML="";
+        document.getElementById("icon3").style.display="inline";
+        document.getElementsByClassName("step0")[1].classList.add("active");
 }
 	else
 	{
@@ -196,20 +138,6 @@ document.getElementsByTagName("h2")[2].innerHTML="";
 	    $(x[4]).hide();
         $(y[4]).show();
 	    document.getElementsByTagName("input")[4].value = "";
-	    swal({
-  title: "Oops, Looks like you are confused",
-  text: "Denominator is same as LCM",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
 	}
 }
 
@@ -220,13 +148,16 @@ function check5()
     
         $(x[5]).show();
 	    $(y[5]).hide();
+      document.getElementsByClassName("step0")[0].classList.add("active");
+      document.getElementsByClassName("step0")[1].classList.add("active");
+      document.getElementsByClassName("step0")[2].classList.add("active");
 <!--document.getElementsByClassName("task")[2].innerHTML="Done";-->
 <!--document.getElementsByTagName("h2")[3].innerHTML="Sol";-->
   document.getElementById("icon4").style.display="inline";
- document.getElementById("icon4").style.color="green";
-document.getElementsByTagName("h2")[0].innerHTML="";
-document.getElementsByTagName("h2")[1].innerHTML="";
-document.getElementsByTagName("h2")[2].innerHTML="";
+  document.getElementById("icon4").style.color="green";
+  document.getElementsByTagName("h2")[0].innerHTML="";
+  document.getElementsByTagName("h2")[1].innerHTML="";
+  document.getElementsByTagName("h2")[2].innerHTML="";
   document.getElementById("icon1").style.display="inline";
   document.getElementById("icon2").style.display="inline";
   document.getElementById("icon3").style.display="inline";
@@ -238,32 +169,22 @@ document.getElementsByTagName("h2")[2].innerHTML="";
 	    $(x[5]).hide();
         $(y[5]).show();
 	    document.getElementsByTagName("input")[5].value = "";
-	    swal({
-  title: "Oops, Looks like you are confused in the format",
-  text: "Denominator in mixed fraction is same as denominator of fraction ",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
 	}
 }
 function right1(){
+  if(document.getElementById("btn3").innerHTML==="LCM"){
+    $("#myModal").modal('hide');
     document.getElementsByClassName("ryt1")[0].style.display="inline";
     document.getElementsByClassName("ryt1")[1].style.display="inline";
     document.getElementById("btn1").innerHTML="Find Equivalent";
     document.getElementById("btn2").innerHTML="Simplest Form";
     document.getElementById("btn3").innerHTML="Compare Denominators";
     document.getElementById("btn4").innerHTML="Compare Numerators";
+  }
 }
 function right2(){
     if(document.getElementById("btn1").innerHTML==="Find Equivalent"){
+        $("#myModal").modal('hide');
         document.getElementsByClassName("ryt2")[0].style.display="block";
         document.getElementsByClassName("ryt2")[1].style.display="inline";
         document.getElementsByClassName("ryt2")[2].style.display="block";
@@ -272,195 +193,59 @@ function right2(){
         document.getElementsByClassName("ryt2")[5].style.display="inline";
         document.getElementsByClassName("ryt2")[6].style.display="block";
         document.getElementsByClassName("ryt2")[7].style.display="block";
+        document.getElementById("hint-btn").disabled = true;
+        document.getElementById("hint-btn").style.backgroundColor = "grey";
     }
-else{
- alert("Wrong Option");
-}
 }
 
-window.onload = function() {
-var count = 0;
-
-var countButton = document.getElementById("hint-btn");
-var displayCount = document.getElementsByClassName("showhints");
-countButton.onclick = function(){
-  count++;
-  if(count == 1)
-  {
-  document.getElementById("btn-grp1").style.visibility="visible";
-  }
-  else
-  {
-    if(count == 2) {displayCount[1].innerHTML = "Hint 2 :{{ hints.h2 }}\n" ;}
-    else {displayCount[2].innerHTML = "Hint 3 :{{ hints.h3 }}\n" ;}
-  }
-  }
-
-  var subbutton = document.getElementById("b1");
-  subbutton.onclick = function(){
-     document.querySelector(".myform").setAttribute("action","score/"+1+"/"+count+"/"+feedcount);
-     function time(){
-     var s=document.getElementById("scre");
-     s.style.display="none";
-     }
-     var d=setTimeout(time,500);
-     clearInterval(d);
-<!-- setTimeout(function(){s.style.display="none";},500);-->
-
-  }
-}
-
-function openSlideMenu()
-{
-    document.getElementById('menu').style.width = '250px';
-    document.getElementById('content').style.marginLeft = '250px';
-}
-
-function closeSlideMenu()
-{
-    document.getElementById('menu').style.width = '0px';
-    document.getElementById('content').style.marginLeft = '0px';
-}
-
-
-var close = document.getElementsByClassName("closebtn");
-var i;
-
-for (i = 0; i < close.length; i++) {
-  close[i].onclick = function(){
-    var div = this.parentElement;
-    div.style.opacity = "0";
-    setTimeout(time,100);
-    function time(){
-     var s=document.getElementById("scre");
-     alert("Bhavya");
-     s.style.display="none";
-    }
-  }
-}
 
 {% endblock %}
+{% block chapter %}Fraction{% endblock %}
+{% block topic %}Compare Two Fraction{% endblock %}
 
-{% block message %} 
-{% with messages = get_flashed_messages(with_categories=true) %}
-  {% if messages %}
-<div class="alert alert-info" role="alert" id="scre">
-     <span class="closebtn">&times;</span>
-    {% for message in get_flashed_messages() %}
-  <h4 class="alert-heading">{{ message }}</h4>
-    {% endfor %}
-</div>
-  {% endif %}
-{% endwith %}
-</div>
+
+{% block hint %}
+    <button type="button" class="btn btn-primary" style="margin-bottom:30px;width:100%" id="btn1" onclick="right2();">HCF</button>
+    <button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%" id="btn2">Average</button>
+    <button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%" onclick="right1();" id="btn3">LCM</button>
+    <button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%" id="btn4">Multiply</button>
 {% endblock %}
 
-
-    {% block progress %}{{scoredict.tcp}}%{% endblock %}
-    {% block question %}{{scoredict.totalqts}}{% endblock %}
-    {% block pvalue %}{{ scoredict.tcp }}{% endblock %}
 {% block content %}
-<!--<div class="project">-->
-<!--  <div class="task pending"></div>-->
-<!--  <div class="progress"><div> </div> </div>-->
-<!--  <div class="task"></div>-->
-<!--  <div class="progress"><div> </div></div>-->
-<!--  <div class="task"></div>-->
-<!--</div>-->
-
-<div class="project" style="margin-left:65%;">
-    <div style="display:flex;justify-content:center;align-items:center;">
-  <div class="task running ">
-      <h2>1</h2>
-      <i class="far fa-check" id="icon1" style="display:none;color:white;margin-bottom:17px;"></i>
-  </div>
-        <div class="progress">
-            <div class="running" data-progress="100%"> </div> </div>
-  <div  class="task running">
-      <h2>2</h2>
-      <i class="far fa-check" id="icon2" style="display:none;color:white;margin:auto;"></i></div>
-  <div class="progress"  ><div class="running" data-progress="100%"> </div></div>
-        <div class="task running">
-            <h2>3</h2>
-            <i class="far fa-check" id="icon3" style="display:none;color:white;margin:auto;"></i></div>
-  <div class="progress"  ><div class="running" data-progress="100%"> </div></div>
-        <div class="task running">
-            <h2></h2>
-            <i class="fas fa-pennant" id="icon4" style="color:white;display:flex;justify-content:center;align-items:center;margin-bottom:30px;"></i></div>
-    </div>
-</div>
-
-<!--  <div class="task passed"></div>-->
-<!--  <div class="progress"><div class="passed"> </div> </div>-->
-<!--  <div class="task passed"></div>-->
-<!--  <div class="progress"><div class="passed"> </div></div>-->
-<!--  <div class="task passed"></div>-->
-<!--</div>-->
-
-<!--<div class="project">-->
-<!--  <div class="task failed"></div>-->
-<!--  <div class="progress"><div> </div> </div>-->
-<!--  <div class="task"></div>-->
-<!--  <div class="progress"><div> </div></div>-->
-<!--  <div class="task"></div>-->
-<!--</div>-->
-
-<!--<div class="project">-->
-<!--  <div class="task passed"></div>-->
-<!--  <div class="progress"><div class="passed"> </div> </div>-->
-<!--  <div class="task passed"></div>-->
-<!--  <div class="progress"><div class="passed"> </div></div>-->
-<!--  <div class="task passed"></div>-->
-<!--</div>-->
-
-<!--<div class="project">-->
-<!--  <div class="task failed"></div>-->
-<!--  <div class="progress"><div class="failed"> </div> </div>-->
-<!--  <div class="task failed"></div>-->
-<!--  <div class="progress"><div> </div></div>-->
-<!--  <div class="task"></div>-->
-<!--</div>-->
-    {{ answer.que }}
+    <h5 class="card-title">{{ answer.que }}</h5>
     <br><br>
-     <div class="btn-group btn-group-vertical" id="btn-grp1" role="group" aria-label="Basic example" style="float:right; margin-right:120px;visibility:hidden;">
-          <button type="button" class="btn btn-primary" style="margin-bottom:30px;" id="btn1" onclick="right2();">HCF</button>
-          <button type="button" class="btn btn-secondary" style="margin-bottom:30px;" id="btn2">Average</button>
-          <button type="button" class="btn btn-secondary" style="margin-bottom:30px;" onclick="right1();" id="btn3">LCM</button>
-        <button type="button" class="btn btn-secondary" style="margin-bottom:30px;" id="btn4">Multiply</button>
-</div>
-
     <label for="quo1" style="display:none;" class="ryt1">LCM:</label>
     <input type="text" id="quo1" name="quo" maxlength="8" size="2" onblur="check0();" class="ryt1" style="display:none;">
-    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
-    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
+    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct" style="display: none;">
+    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong" style="display: none;">
     <br><br>
 
     <label for="rem1" class="ryt2" style="display:none;">Equivalent fraction of {{ answer.f1 }}</label>
     <input type="text" class="ryt2" id="rem1" name="rem" maxlength="8" size="2" onblur="check1();" style="display:none;">
-    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct" >
-    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
+    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct"style="display: none;" >
+    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong"style="display: none;">
     <h5 style="display:none;" class="ryt2">---------------</h5>
     <input type="text" class="ryt2" id="rem2" name="rem" maxlength="8" size="2" onblur="check2();" style="display:none;">
-    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct" >
-    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
+    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct" style="display: none;">
+    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong" style="display: none;">
     <br>
 
     <label for="rem3" class="ryt2" style="display:none;">Equivalent fraction of {{ answer.f2 }}</label>
     <input type="text" id="rem3" name="rem" maxlength="8" size="2" onblur="check3();" class="ryt2" style="display:none;">
-<img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct" >
-    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
+    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct" style="display: none;">
+    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong"style="display: none;">
     <h5 style="display:none;" class="ryt2">---------------</h5>
 
     <input type="text" id="rem4" name="rem" maxlength="8" size="2" onblur="check4();" class="ryt2" style="display:none;">
-    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
-    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
+    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct" style="display: none;">
+    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong" style="display: none;">
     <br>
 
     <label for="quo2">Solution : </label>
     {{ answer.f1 }}
     <input type="text" id="quo2" name="quo" maxlength="8" size="2" onblur="check5();">{{ answer.f2 }}
-    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
-    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
+    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct" style="display: none;">
+    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong" style="display: none;">
     <br><br>
 
 {% endblock %}
