--- a/ITS_demo/templates/layout_new.html
+++ b/ITS_demo/templates/layout_new.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> 
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Practice</title>
     
     <style>
@@ -374,7 +375,7 @@
 
               }
               else{
-                setTimeout(function(){ location.reload() }, 5000);
+                setTimeout(function(){ location.reload() }, 3000);
               }
               
               
