--- a/ITS_demo/templates/division.html
+++ b/ITS_demo/templates/division.html
@@ -1,28 +1,45 @@
 {% extends "layout_new_easy.html" %}
 
-
-
 {% block script %}
-
+var x = document.getElementsByClassName("correct");
+var y = document.getElementsByClassName("wrong");
 var ans=["{{ easy.ans_num[0] }}","{{ easy.ans_den[0] }}","{{ easy.ans_num[1] }}","{{ easy.ans_den[1] }}"]
 console.log(ans)
 function checkQuo(i){
     if(document.getElementsByTagName("input")[i].value == ans[i]){
-        alert("Correct");
+        <!-- alert("Correct"); -->
+        $(x[i]).show();
+	    $(y[i]).hide();
         document.getElementsByClassName("step0")[i].classList.add("active");
     }
     else{
-        alert("you have not divided properly...")
+        if(document.getElementsByTagName("input")[i].value != ""){
+            $(x[i]).hide();
+            $(y[i]).show();
+            document.getElementsByTagName("input")[i].value = "";
+            swal("Oops!", "Checkout hint for help", "error");
+            <!-- alert("Try again"); -->
+          }	 
+        <!-- alert("you have not divided properly...") -->
     }
 }
 
 function checkRem(i){
     if(document.getElementsByTagName("input")[i].value == ans[i]){
-        alert("Correct");
+        <!-- alert("Correct"); -->
+        $(x[i]).show();
+        $(y[i]).hide();
         document.getElementsByClassName("step0")[i].classList.add("active");
     }
     else{
-        alert("you have not divided properly...")
+        if(document.getElementsByTagName("input")[i].value != ""){
+            $(x[i]).hide();
+            $(y[i]).show();
+            document.getElementsByTagName("input")[i].value = "";
+            swal("Oops!", "Checkout hint for help", "error");
+            <!-- alert("Try again"); -->
+          }	 
+        <!-- alert("you have not divided properly...") -->
     }
 }
 
@@ -42,8 +59,12 @@ window.onload = function(){
 {% for i in range(0,3,2) %}
     <h5 class="card-title">{{easy.q[i]}}</h5>
     {{ easy.label1 }}: <input type="text" id="quo" onchange="checkQuo({{ i }});">
-    <br>
+    <i class="fal fa-check correct fa-2x" style="display: none; color: green;"></i>
+    <i class="fal fa-times wrong fa-2x" style="display: none; color: red"></i>
+    <br><br>
     {{ easy.label2 }}: <input type="text" id="rem" onchange="checkRem({{ i+1 }});">
+    <i class="fal fa-check correct fa-2x" style="display: none; color: green;"></i>
+    <i class="fal fa-times wrong fa-2x" style="display: none; color: red"></i>
     <br><br>
 {% endfor %}
 {% endblock %}
